# eo-trader

./: Cargo.toml  README.md
src/: bot.rs  candlestick.rs  expertoption.rs  main.rs  message.rs  trade.rs  tradingview.rs  trend.rs  websocket.rs
