[package]
name = "eo-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
rand = "0.8.5"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
websocket = "0.26.5"
